# TextEdit

./: .gitignore  CMakeLists.txt  CREDITS  LICENSE  README.md  module.json
docs/: main.md
main/: main.cpp
main/src/: module.cpp  module.hpp
main/ui/instances/text_editor/: text_editor.cpp  text_editor.hpp  text_editor_core-cpp  text_editor_core.cpp  text_editor_core.hpp
main/ui/instances/text_editor/core/: dtl.h  textdiff.cpp  textdiff.h  texteditor.cpp  texteditor.h
main/ui/main/: ui.hpp
scripts/: build.bat  build.sh  build_vx.bat  test_project.bat  test_project.sh
